--- a/src/components/year-picker/index.scss
+++ b/src/components/year-picker/index.scss
@@ -10,6 +10,7 @@
   display: flex;
   transition: all 0.5s ease;
   transform: translateY(-103%);
+  padding: 10px;
   &.visible {
     transform: translateY(0%);
   }
